1. Add comments 2. Change webpack config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --mode development --hot --colors --progress --open",
-    "build": "webpack --mode none --colors --progress"
+    "build": "webpack --progress"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
